Fixed promotion mobile sizing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1068,16 +1068,15 @@ html {
 }
 .promotion-box_Mobile {
     display: flex;
-    width: 177px;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
     height: 300px;
-    background-color: #5F8A6D;
     border-radius: 1rem;
-    padding: 20px 20px 12px;
     flex-flow: column;
     transition: all .2s ease-in-out;
     scroll-snap-align: start;
     cursor: pointer;
-    z-index: 400;
 }
 .promotion-box_Mobile:hover {
     transform: scale(1.037); 
